added a comment to my name

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <ul>
                 <li>Brayden Shultz</li>
                 <li>Tristan Rodarte</li>
-                <li>Ethan Bailey</li>
+                <li>Ethan Bailey (Yippee!!!!!!!!!!!!!)</li>
                 <li>Superwoman (Example)</li>
                 <li>Chairman (Example)</li>
 
